--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,30 +9,24 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
+  --primary-glow: conic-gradient(from 180deg at 50% 50%,
+      #16abff33 0deg,
+      #0885ff33 55deg,
+      #54d6ff33 120deg,
+      #0071ff33 160deg,
+      transparent 360deg);
+  --secondary-glow: radial-gradient(rgba(255, 255, 255, 1),
+      rgba(255, 255, 255, 0));
 
   --tile-start-rgb: 239, 245, 249;
   --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
+  --tile-border: conic-gradient(#00000080,
+      #00000040,
+      #00000030,
+      #00000020,
+      #00000010,
+      #00000010,
+      #00000080);
 
   --callout-rgb: 238, 240, 241;
   --callout-border-rgb: 172, 175, 176;
@@ -47,24 +41,20 @@
     --background-end-rgb: 0, 0, 0;
 
     --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+    --secondary-glow: linear-gradient(to bottom right,
+        rgba(1, 65, 255, 0),
+        rgba(1, 65, 255, 0),
+        rgba(1, 65, 255, 0.3));
 
     --tile-start-rgb: 2, 13, 46;
     --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+    --tile-border: conic-gradient(#ffffff80,
+        #ffffff40,
+        #ffffff30,
+        #ffffff20,
+        #ffffff10,
+        #ffffff10,
+        #ffffff80);
 
     --callout-rgb: 20, 20, 20;
     --callout-border-rgb: 108, 108, 108;
@@ -83,25 +73,315 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  text-rendering: geometricPrecision;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -webkit-tap-highlight-color: transparent;
+   
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+
 
 a {
   color: inherit;
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.me-auto {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: 0.04em;
+  color: #6b6b6b
+}
+
+.hamburger {
+  width: 30px;
+  height: 20px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.line {
+  width: 40px;
+  height: 4px;
+  background-color: black;
+}
+
+.sidebar {
+  padding-top: 0 !important;
+  margin-top: 55px;
+}
+
+.sidebar li a:hover {
+  background-color: white !important;
+}
+.navbar-wrapper {
+  width: 100%;
+  transition: all 0.3s ease;
+  padding: 11px 30px;
+}
+
+.navbar-wrapper.sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  background-color: white; 
+}
+
+.navbar-nav {
+  gap: 12%;
+  position: absolute;
+  right: 40%;
+}
+
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: -250px;
+  width: 250px;
+  height: 100%;
+  transition: left 0.3s ease;
+  padding-top: 60px;
+}
+
+.sidebar.open {
+  z-index: 999;
+  left: 0;
+  background-color: white;
+  width: 150px;
+  height: 100vh;
+}
+
+.sidebar ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.sidebar li {
+  padding: 0 0 0 25px;
+  text-align: left;
+}
+
+.sidebar li a {
+  text-decoration: none;
+  display: block;
+  cursor: pointer;
+  display: inline-block;
+  color: black;
+  opacity: 0.5;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 13.5px;
+}
+
+.sidebar li a:hover {
+  background-color: #575757;
+}
+
+.custom-form-search {
+  position: absolute;
+  right: 0
+}
+
+.custom-form-search button {
+  background-color: white;
+  border: none;
+}
+
+.custom-form-search .btn:hover {
+  background-color: white;
+  border: none
+}
+
+.custom-form-search .form-control {
+  border: none;
+  width: 50%;
+  padding: 0
+}
+
+
+/* Projects */
+
+.project-list {
+  display: flex;
+  flex-direction: column;
+}
+
+
+.project-info {
+  display: flex;
+  flex-direction: column;
+}
+
+.project-info img {
+  width: 30px;
+  height: 30px;
+  margin-right: 5px;
+}
+
+.project-details {
+  padding: 20px;
+}
+
+.media-content {
+  display: flex;
+  flex-direction: row;
+  overflow-x: scroll;
+}
+
+.media-content img,
+.media-content video {
+  margin-right: 10px;
+  max-width: 100%;
+}
+
+.media-content p {
+  margin-right: 10px;
+  max-width: 100%;
+}
+
+.side-details .project-icon img {
+  width: 40px;
+  height: 40px
+}
+
+.side-details {
+  text-align: right;
+  margin-right: 490px;
+  margin-top: -12px;
+  position: absolute;
+
+}
+
+.main-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main-image img {
+  width: 215px;
+
+}
+
+.project-info h3 {
+  margin-top: 12px;
+  margin-bottom: 6px;
+  font-size: 13px;
+  width: 208px;
+  font-style: normal;
+  font-weight: normal;
+}
+
+.project-info p {
+  font-style: normal;
+  font-size: 11px;
+  line-height: 15px;
+  text-transform: uppercase;
+  color: #8e8d8d;
+
+}
+
+.project-details img {
+  width: 500px;
+  height: 400px
+}
+
+.project-list {
+  transition: transform 0.8s ease; 
+}
+
+.project-list.scaled {
+  transform: scale(0.97); 
+}
+
+.project-details-wrapper {
+  justify-content: center;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.main-image {
+  flex-shrink: 0;
+  cursor: pointer;
+}
+
+
+.project-details-content {
+  cursor: grab;
+  position: absolute;
+  left: 72%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 20px;
+  flex-shrink: 0;
+}
+
+.detail-item {
+  flex-shrink: 0;
+}
+
+.detail-item img {
+  width: 460px;
+  height: auto;
+}
+
+.detail-item p {
+  font-size: 13px;
+  max-width: 300px;
+  white-space: normal;
+}
+
+
+.project-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 16px 0;
+  position: relative;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  transition: all 0.8s ease;
+  
+}
+
+.main-image img {
+  width: 215px;
+  height: auto;
+  transition: transform 0.8s ease-in-out, width 0.8s ease-in-out;
+  cursor: pointer;
+}
+.project-item.selected .main-image img {
+  width: 460px;
+  transform: scale(1.2);
+  transition: transform 0.8s ease-in-out, width 0.8s ease-in-out;
+}
+
+.project-item.selected .side-details {
+  margin-right: 850px;
+  transition: margin-right 0.8s ease-in-out;
+  margin-top:-150px;
+  transition: margin-top 0.8s ease-in-out;
+}
+.project-item.selected .side-details  .project-info h3{
+  font-size: 17px;
+}
+.project-item.selected .side-details  .project-info p{
+  font-size: 13px;
+}
+.project-item.selected .project-details-wrapper {
+  margin-left: 20px;
+  transition: margin-left 0.8s ease-in-out;
+}
+
+.project-item::-webkit-scrollbar {
+  display: none;
 }
