--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,24 +9,30 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 
-  --primary-glow: conic-gradient(from 180deg at 50% 50%,
-      #16abff33 0deg,
-      #0885ff33 55deg,
-      #54d6ff33 120deg,
-      #0071ff33 160deg,
-      transparent 360deg);
-  --secondary-glow: radial-gradient(rgba(255, 255, 255, 1),
-      rgba(255, 255, 255, 0));
+  --primary-glow: conic-gradient(
+    from 180deg at 50% 50%,
+    #16abff33 0deg,
+    #0885ff33 55deg,
+    #54d6ff33 120deg,
+    #0071ff33 160deg,
+    transparent 360deg
+  );
+  --secondary-glow: radial-gradient(
+    rgba(255, 255, 255, 1),
+    rgba(255, 255, 255, 0)
+  );
 
   --tile-start-rgb: 239, 245, 249;
   --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(#00000080,
-      #00000040,
-      #00000030,
-      #00000020,
-      #00000010,
-      #00000010,
-      #00000080);
+  --tile-border: conic-gradient(
+    #00000080,
+    #00000040,
+    #00000030,
+    #00000020,
+    #00000010,
+    #00000010,
+    #00000080
+  );
 
   --callout-rgb: 238, 240, 241;
   --callout-border-rgb: 172, 175, 176;
@@ -41,20 +47,24 @@
     --background-end-rgb: 0, 0, 0;
 
     --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(to bottom right,
-        rgba(1, 65, 255, 0),
-        rgba(1, 65, 255, 0),
-        rgba(1, 65, 255, 0.3));
+    --secondary-glow: linear-gradient(
+      to bottom right,
+      rgba(1, 65, 255, 0),
+      rgba(1, 65, 255, 0),
+      rgba(1, 65, 255, 0.3)
+    );
 
     --tile-start-rgb: 2, 13, 46;
     --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(#ffffff80,
-        #ffffff40,
-        #ffffff30,
-        #ffffff20,
-        #ffffff10,
-        #ffffff10,
-        #ffffff80);
+    --tile-border: conic-gradient(
+      #ffffff80,
+      #ffffff40,
+      #ffffff30,
+      #ffffff20,
+      #ffffff10,
+      #ffffff10,
+      #ffffff80
+    );
 
     --callout-rgb: 20, 20, 20;
     --callout-border-rgb: 108, 108, 108;
@@ -74,13 +84,10 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   text-rendering: geometricPrecision;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-    -webkit-tap-highlight-color: transparent;
-   
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-tap-highlight-color: transparent;
 }
-
-
 
 a {
   color: inherit;
@@ -93,7 +100,7 @@ a {
   font-size: 12px;
   line-height: 15px;
   letter-spacing: 0.04em;
-  color: #6b6b6b
+  color: #6b6b6b;
 }
 
 .hamburger {
@@ -130,7 +137,7 @@ a {
   top: 0;
   left: 0;
   z-index: 1000;
-  background-color: white; 
+  background-color: white;
 }
 
 .navbar-nav {
@@ -139,6 +146,22 @@ a {
   right: 40%;
 }
 
+.navbar-wrapper .nav-link {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  position: relative;
+}
+
+.navbar-wrapper .active-dot {
+  position: absolute;
+  width: 5px;
+  height: 5px;
+  background-color: black;
+  top: 50%;
+  left: -5px;
+  transform: translateY(-50%);
+}
 
 .sidebar {
   position: fixed;
@@ -186,7 +209,7 @@ a {
 
 .custom-form-search {
   position: absolute;
-  right: 0
+  right: 0;
 }
 
 .custom-form-search button {
@@ -196,15 +219,14 @@ a {
 
 .custom-form-search .btn:hover {
   background-color: white;
-  border: none
+  border: none;
 }
 
 .custom-form-search .form-control {
   border: none;
   width: 50%;
-  padding: 0
+  padding: 0;
 }
-
 
 /* Projects */
 
@@ -212,7 +234,6 @@ a {
   display: flex;
   flex-direction: column;
 }
-
 
 .project-info {
   display: flex;
@@ -248,7 +269,7 @@ a {
 
 .side-details .project-icon img {
   width: 40px;
-  height: 40px
+  height: 40px;
 }
 
 .side-details {
@@ -256,7 +277,6 @@ a {
   margin-right: 490px;
   margin-top: -12px;
   position: absolute;
-
 }
 
 .main-image {
@@ -267,7 +287,6 @@ a {
 
 .main-image img {
   width: 215px;
-
 }
 
 .project-info h3 {
@@ -285,20 +304,19 @@ a {
   line-height: 15px;
   text-transform: uppercase;
   color: #8e8d8d;
-
 }
 
 .project-details img {
   width: 500px;
-  height: 400px
+  height: 400px;
 }
 
 .project-list {
-  transition: transform 0.8s ease; 
+  transition: transform 0.8s ease;
 }
 
 .project-list.scaled {
-  transform: scale(0.97); 
+  transform: scale(0.97);
 }
 
 .project-details-wrapper {
@@ -312,7 +330,6 @@ a {
   flex-shrink: 0;
   cursor: pointer;
 }
-
 
 .project-details-content {
   cursor: grab;
@@ -339,7 +356,6 @@ a {
   max-width: 300px;
   white-space: normal;
 }
-
 
 .project-item {
   display: flex;
@@ -371,13 +387,13 @@ a {
 .project-item.selected .side-details {
   margin-right: 850px;
   transition: margin-right 0.8s ease-in-out;
-  margin-top:-150px;
+  margin-top: -150px;
   transition: margin-top 0.8s ease-in-out;
 }
-.project-item.selected .side-details  .project-info h3{
+.project-item.selected .side-details .project-info h3 {
   font-size: 17px;
 }
-.project-item.selected .side-details  .project-info p{
+.project-item.selected .side-details .project-info p {
   font-size: 13px;
 }
 .project-item.selected .project-details-wrapper {
@@ -389,6 +405,98 @@ a {
   display: none;
 }
 
-.project-details-content .detail-item p,.project-details-content .detail-item img {
+.project-details-content .detail-item p,
+.project-details-content .detail-item img {
   user-select: none;
+}
+
+.footer {
+  display: flex;
+  font-family: "__Inter_36bd41", "__Inter_Fallback_36bd41";
+  margin-top: 100px;
+  width: 100%;
+  text-transform: uppercase;
+  position: relative;
+  font-size: 12px;
+  color: #6b6b6b;
+  margin-bottom: 100px;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 100px;
+  height: 320px;
+  max-width: 840;
+
+  justify-content: center;
+}
+.footer a {
+  text-decoration: none;
+  color: #6b6b6b !important;
+}
+.footer ul {
+  list-style: none;
+  padding-top: 40px;
+  margin: 0;
+}
+.footer ul li span {
+  width: 100px;
+  display: inline-block;
+}
+.footer ul li .mails {
+  text-transform: lowercase;
+  text-decoration: underline;
+  margin-left: 10px;
+}
+
+.footer {
+  font-family: Arial, sans-serif;
+  padding: 20px;
+}
+
+.footer-toggle {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.icon {
+  margin-left: 10px;
+  font-size: 13px;
+  margin-right: 5px;
+  transition: transform 0.3s ease;
+}
+
+.rotate {
+  transform: rotate(45deg);
+}
+
+.email-list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  opacity: 0;
+  max-height: 0;
+  transition: opacity 0.5s ease, max-height 0.7s ease;
+  overflow: hidden;
+}
+
+.email-list.show {
+  opacity: 1;
+  max-height: 200px;
+}
+
+.email-list.hide {
+  opacity: 0;
+  max-height: 0;
+}
+
+.email-list li {
+  margin-bottom: 15px;
+}
+
+.email-list a {
+  text-decoration: none;
+  color: #007bff;
+}
+
+.email-list a:hover {
+  text-decoration: underline;
 }
