--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,7 +39,10 @@
   --card-rgb: 180, 185, 188;
   --card-border-rgb: 131, 134, 135;
 }
-
+li {
+  list-style: none;
+  color: #6b6b6b;
+}
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
@@ -130,6 +133,8 @@ a {
   width: 100%;
   transition: all 0.3s ease;
   padding: 11px 30px;
+  margin-bottom: 20px;
+  background-color: white;
 }
 
 .navbar-wrapper.sticky {
@@ -151,6 +156,71 @@ a {
   align-items: center;
   gap: 5px;
   position: relative;
+}
+
+.landscape-sub {
+  justify-content: center;
+  background-color: white;
+  position: absolute;
+  display: flex;
+  top: 100%;
+
+  width: 700px;
+  gap: 40px;
+  padding: 10px 0;
+  z-index: 10;
+}
+
+.engineering-sub {
+  justify-content: center;
+  background-color: white;
+  position: absolute;
+  display: flex;
+  top: 100%;
+  left: -150%;
+  width: 700px;
+  gap: 40px;
+  padding: 10px 0;
+  z-index: 10;
+}
+
+.architecture-sub {
+  justify-content: center;
+  background-color: white;
+  position: absolute;
+  display: flex;
+  top: 100%;
+  left: -320%;
+  width: 900px;
+  gap: 40px;
+  padding: 10px 0;
+  z-index: 10;
+}
+
+.planning-sub {
+  justify-content: center;
+  background-color: white;
+  position: absolute;
+  display: flex;
+  top: 100%;
+  left: -550%;
+  width: 700px;
+  gap: 40px;
+  padding: 10px 0;
+  z-index: 10;
+}
+
+.products-sub {
+  justify-content: center;
+  background-color: white;
+  position: absolute;
+  display: flex;
+  top: 100%;
+  left: -650%;
+  width: 700px;
+  gap: 40px;
+  padding: 10px 0;
+  z-index: 10;
 }
 
 .navbar-wrapper .active-dot {
