--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -443,13 +443,12 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 16px;
+  margin: 16px 0;
   position: relative;
   overflow-x: scroll;
   overflow-y: hidden;
   transition: all 0.8s ease;
   cursor: grab;
-  padding-bottom: 40px;
 }
 .project-item:active {
   cursor: grabbing; /* Change cursor when dragging */
@@ -637,26 +636,20 @@ a {
     height: 1.7em;
     transition: background-image 0.3s ease 0.3s;
   }
-
-  .navbar-toggler-icon {
+  .navbar-toggler.collapsed .navbar-toggler-icon {
     background-image: url(../../public/images/filter.svg) !important;
-    width: 1.3em;
-    height: 1.7em;
   }
   .navbar-collapse {
     position: absolute;
     right: -220px;
     /* display: none; */
     pointer-events: none;
-    padding-left: 20px;
     width: 220px;
     background-color: #ffffff;
-    padding-top: 20px;
-    padding-bottom: 40px;
     height: 100vh;
     overflow-y: auto;
     overflow-x: hidden;
-    padding-bottom: 30px;
+    padding-left: 10px;
     min-height: 100vh;
     display: flex;
     flex-direction: column-reverse;
@@ -717,27 +710,22 @@ a {
     padding-left: 0 !important;
   }
   .project-item {
-    /* flex-direction: column; */
+    flex-direction: column;
   }
   .side-details {
     text-align: unset;
     margin-right: 0;
     margin-top: 10px;
-    position: absolute;
+    position: unset;
     display: flex;
     align-items: center;
     gap: 13px;
-    bottom: 0;
-    z-index: 99;
-  }
-  .project-item .main-image img {
-    width: 340px;
   }
   .project-info h3 {
     margin-top: 0;
     margin-bottom: 0;
     font-size: 9px;
-    width: 297px;
+    width: 173px;
   }
   .project-info p {
     font-size: 10px;
