--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -462,6 +462,7 @@ a {
   cursor: pointer;
 }
 .project-item.selected .main-image img {
+  /* margin-top: 120px; */
   width: 460px;
   transform: scale(1.2);
   transition: transform 0.8s ease-in-out, width 0.8s ease-in-out;
