--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -452,7 +452,7 @@ a {
   padding-bottom: 40px;
 }
 .project-item:active {
-  cursor: grabbing; /* Change cursor when dragging */
+  cursor: grabbing;
 }
 
 .main-image img {
@@ -462,7 +462,6 @@ a {
   cursor: pointer;
 }
 .project-item.selected .main-image img {
-  /* margin-top: 120px; */
   width: 460px;
   transform: scale(1.2);
   transition: transform 0.8s ease-in-out, width 0.8s ease-in-out;
@@ -505,7 +504,7 @@ a {
   font-size: 11px;
   color: #8e8d8d;
   font-weight: 250;
-  left: 47%;
+  left: 35%;
   margin: 0;
   padding: 0;
   z-index: 999;
@@ -634,24 +633,24 @@ a {
   }
 
   .navbar-toggler-icon {
-    background-image: url(../../public/images/filter.svg) !important;
+    background-image: url(../../public/images/dash.svg) !important;
     width: 1.3em;
     height: 1.7em;
+  }
+  .navbar-toggler.collapsed .navbar-toggler-icon {
+    background-image: url(../../public/images/filter.svg) !important;
   }
   .navbar-collapse {
     position: absolute;
     right: -220px;
     /* display: none; */
     pointer-events: none;
-    padding-left: 20px;
     width: 220px;
     background-color: #ffffff;
-    padding-top: 20px;
-    padding-bottom: 40px;
     height: 100vh;
     overflow-y: auto;
     overflow-x: hidden;
-    padding-bottom: 30px;
+    padding-left: 10px;
     min-height: 100vh;
     display: flex;
     flex-direction: column-reverse;
@@ -674,17 +673,39 @@ a {
     /* flex-direction: column; */
     z-index: 9;
     justify-content: flex-end;
-    right: 0;
+    right: -25px;
   }
   .navbar-nav {
     position: unset;
+    align-items: flex-start;
+    gap: 20px;
+    margin-top: 5px;
+  }
+  .custom-form-search .form-control {
+    width: 60%;
   }
   .navbar-wrapper .nav-link {
     font-size: 14px;
+    flex-direction: column;
+    align-items: flex-start;
+    color: #000000;
+  }
+  .navbar-wrapper .nav-link .active-dot {
+    display: none;
+  }
+  .navbar-wrapper .nav-link ul .active-dot {
+    display: block;
   }
   .custom-form-search {
     position: unset;
     justify-content: start;
+  }
+  .custom-form-search input::placeholder {
+    font-size: 14px;
+  }
+  .custom-form-search button svg {
+    width: 1rem;
+    height: 1rem;
   }
   .btn {
     padding-left: 0 !important;
@@ -729,6 +750,12 @@ a {
   }
   .main-image img {
     position: relative;
+  }
+  .landscape-sub, .engineering-sub, .architecture-sub, .planning-sub, .products-sub {
+    position: unset;
+    flex-direction: column;
+    width: 100%;
+    gap: 10px;
   }
   .project-item.selected .main-image img {
     width: 340px;
