--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -291,7 +291,7 @@ a {
 .custom-form-search {
   position: absolute;
   right: 0;
-  justify-content: center;
+  justify-content: end;
 }
 
 .custom-form-search button {
@@ -504,10 +504,14 @@ a {
   font-size: 11px;
   color: #8e8d8d;
   font-weight: 250;
-  left: 35%;
+  left: 45%;
   margin: 0;
   padding: 0;
   z-index: 999;
+  background-color: #ffffff;
+  height: 100vh;
+  width: 220px;
+  padding-left: 10px;
 }
 
 .suggestions li {
@@ -624,6 +628,22 @@ a {
   font-size: 12px;
   color: #000000;
   font-weight: 400;
+}
+@media (max-width: 1230px) {
+  .project-item.selected .main-image img {
+    width: 370px;
+  }
+}
+@media (max-width: 1100px) {
+  .navbar-nav {
+    gap: 10%;
+  }
+}
+@media (max-width: 880px) {
+  .navbar-wrapper {
+    margin-bottom: 0;
+    padding: 0 20px;
+  }
 }
 @media (max-width: 991px) {
   .navbar-toggler {
