--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -171,9 +171,7 @@ a {
   padding: 10px 0;
   z-index: 10;
 }
-.landscape-sub li {
-  position: relative;
-}
+
 .engineering-sub {
   justify-content: center;
   background-color: white;
@@ -186,7 +184,12 @@ a {
   padding: 10px 0;
   z-index: 10;
 }
-.engineering-sub li {
+.engineering-sub li,
+.architecture-sub li,
+.landscape-sub li,
+.planning-sub li,
+.products-sub li {
+  padding: 8px;
   position: relative;
 }
 .architecture-sub {
@@ -201,9 +204,7 @@ a {
   padding: 10px 0;
   z-index: 10;
 }
-.architecture-sub li {
-  position: relative;
-}
+
 .planning-sub {
   justify-content: center;
   background-color: white;
@@ -216,9 +217,7 @@ a {
   padding: 10px 0;
   z-index: 10;
 }
-.planning-sub li {
-  position: relative;
-}
+
 .products-sub {
   justify-content: center;
   background-color: white;
@@ -231,9 +230,7 @@ a {
   padding: 10px 0;
   z-index: 10;
 }
-.products-sub li {
-  position: relative;
-}
+
 .navbar-wrapper .active-dot {
   position: absolute;
   width: 5px;
@@ -434,7 +431,7 @@ a {
 }
 
 .detail-item p {
-  font-size: 13px;
+  font-size: 12px;
   max-width: 300px;
   white-space: normal;
 }
@@ -828,6 +825,5 @@ a {
   }
   .footer .footer-toggle {
     justify-content: center;
-    /* margin: 10px; */
   }
 }
