--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -629,14 +629,14 @@ a {
   font-weight: 400;
 }
 .project-list.fade-out {
-  transform: translateY(-200%);
   opacity: 0;
-  transition: transform 0.7s ease-out, opacity 0.9s ease-in;
+  /* transform: translateY(-200%); */
+  transition: opacity ease-in;
 }
 .project-list.fade-in {
-  transform: translateY(0);
+  /* transform: translateY(0); */
   opacity: 1;
-  transition: transform 0.7s ease-out, opacity 0.9s ease-in;
+  transition: opacity 0.5s ease-in;
 }
 @media (max-width: 1230px) {
   .project-item.selected .main-image img {
